[package]
name = "open-rdma-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.56"
num_enum = "0.7.2"
socket2 = { version = "0.4", features = ["all"] }
crc32fast = "1.4.0"
bitflags = "2.4.2"
libc = "0.2"
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"
rand = { version = "0.8.5", features = ["std", "std_rng"], default-features = false }
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
bitfield = "0.14.0"
lockfree = "0.5.1"
eui48 = "1.1.0"

[dev-dependencies]
shared_memory = "0.12.4"
ctor = "0.2.7"
buddy_system_allocator = "0.9.1"
libc = "0.2.153"
lazy_static = "1.4.0"
serial_test = "0.5"


